--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,18 +3,18 @@
     padding: 0;
     margin: 0;
 }
-
+/*body background color*/
 body {
     background-color: #d9dcd6;
 }
-
+/* header font, color, and background*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/*header h1 sizing*/
 .header h1 {
     display: inline-block;
     font-size: 48px;
@@ -31,7 +31,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/* header list formatting*/
 .header ul {
     list-style-type: none;
 }
@@ -49,7 +49,7 @@ a {
 p {
     font-size: 16px;
 }
-
+/*background images*/
 .hero {
     height: 800px;
     width: 100%;
@@ -177,24 +177,24 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/*online reputation management*/
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* social media marketing */
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* footer font and sizing/padding*/
 .footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
+/* this is my font sizing for the h2 in the footer*/
 .footer h2 {
     font-size: 20px;
 }
